# fcitx5-oratio

./: .gitignore  CMakeLists.txt  README.md  justfile
src/: CMakeLists.txt  oratio-addon.conf.in  oratio.conf.in  oratio.cpp  oratio.h  oratio_public.h
